force-app/main/default/objects/Article__c/Article__c.object-meta.xml
<CustomObject>
    <description>SSSW - Object used to store detail for an Article. WARNING: This is utilised by Integration processes from SAP-EM via Tibco.</description>
    <label>Article</label>
    <nameField>
        <label>Article Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>