force-app/main/default/objects/Article__c/fields/ArticleGeoLocation__c.field-meta.xml
<CustomField>
    <fullName>ArticleGeoLocation__c</fullName>
    <label>Article GeoLocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>