force-app/main/default/objects/Article__c/fields/ArticleID__c.field-meta.xml
<CustomField>
    <fullName>ArticleID__c</fullName>
    <description>Tracking Number of Article</description>
    <externalId>true</externalId>
    <label>Article ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>