force-app/main/default/objects/Article__c/fields/ArticleLodgementDate__c.field-meta.xml
<CustomField>
    <fullName>ArticleLodgementDate__c</fullName>
    <label>Article Lodgement Date</label>
    <type>Date</type>
</CustomField>