force-app/main/default/objects/Article__c/fields/ArticleType__c.field-meta.xml
<CustomField>
    <fullName>ArticleType__c</fullName>
    <label>Article Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular Parcel</fullName>
            </value>
            <value>
                <fullName>Courier Parcel</fullName>
            </value>
            <value>
                <fullName>Express Parcel</fullName>
            </value>
            <value>
                <fullName>Regular Letter</fullName>
            </value>
            <value>
                <fullName>Courier Letter</fullName>
            </value>
            <value>
                <fullName>Express Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>