force-app/main/default/objects/Article__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <description>StarTrack: Barcode # to capture barcode information</description>
    <label>Barcode #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>