force-app/main/default/objects/Article__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>StarTrack: Billing Account field to capture billing account info</description>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Articles</relationshipLabel>
    <relationshipName>Articles</relationshipName>
    <type>Lookup</type>
</CustomField>