force-app/main/default/objects/Article__c/fields/Calc_First_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Calc_First_Delivery_Date__c</fullName>
    <formula>IF(NOT(ISNULL(First_Delivery_Event_Date__c)),
TEXT(DAY(DATEVALUE(TEXT(First_Delivery_Event_Date__c)))) + &apos;/&apos; +
CASE(MONTH(DATEVALUE(TEXT(First_Delivery_Event_Date__c))), 
1,&apos;01&apos;, 
2,&apos;02&apos;, 
3,&apos;03&apos;, 
4,&apos;04&apos;, 
5,&apos;05&apos;, 
6,&apos;06&apos;, 
7,&apos;07&apos;, 
8,&apos;08&apos;, 
9,&apos;09&apos;, 
10,&apos;10&apos;, 
11,&apos;11&apos;,
12,&apos;12&apos;,
NULL) + &apos;/&apos; + 
TEXT(YEAR(DATEVALUE(TEXT(First_Delivery_Event_Date__c)))) + &apos; &apos; +
IF(VALUE(MID(TEXT(First_Delivery_Event_Date__c), 12, 2))&gt;12, TEXT(VALUE(MID(TEXT(First_Delivery_Event_Date__c), 12, 2))-12), MID(TEXT(First_Delivery_Event_Date__c), 12, 2)) +
MID(TEXT(First_Delivery_Event_Date__c), 14, 3) + &apos; &apos; + 
IF(VALUE(MID(TEXT(First_Delivery_Event_Date__c), 12, 2))&lt;12, &apos;AM&apos;, &apos;PM&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Delivery Event Date</label>
    <type>Text</type>
</CustomField>