force-app/main/default/objects/Article__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Articles</relationshipLabel>
    <relationshipName>Articles</relationshipName>
    <type>Lookup</type>
</CustomField>