force-app/main/default/objects/Article__c/fields/Consignment__c.field-meta.xml
<CustomField>
    <fullName>Consignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SSSW - Collection of multiple Articles used to track set of Articles</description>
    <label>Consignment</label>
    <referenceTo>Article__c</referenceTo>
    <relationshipLabel>Articles</relationshipLabel>
    <relationshipName>Articles</relationshipName>
    <type>Lookup</type>
</CustomField>