force-app/main/default/objects/Article__c/fields/ConsignmentParcelCount__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentParcelCount__c</fullName>
    <label>Consignment Parcel Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>