force-app/main/default/objects/Article__c/fields/ConsignmentTrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentTrackingNumber__c</fullName>
    <description>Used to store the parent consignment tracking number when the article is queried directly (instead of the consignment). In this case only an article record is created in Salesforce without a parent consignment</description>
    <label>Consignment Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>