force-app/main/default/objects/Article__c/fields/ContactType__c.field-meta.xml
<CustomField>
    <fullName>ContactType__c</fullName>
    <description>SSSW</description>
    <label>Contact Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>