force-app/main/default/objects/Article__c/fields/CustCommDecisionCode__c.field-meta.xml
<CustomField>
    <fullName>CustCommDecisionCode__c</fullName>
    <description>SSSW - Holds concatenated Communication Decision Codes</description>
    <label>Cust Comm Decision Code</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>