force-app/main/default/objects/Article__c/fields/Deliver_On_Date_Str__c.field-meta.xml
<CustomField>
    <fullName>Deliver_On_Date_Str__c</fullName>
    <label>Deliver On Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>