force-app/main/default/objects/Article__c/fields/DeliveryInstructions__c.field-meta.xml
<CustomField>
    <fullName>DeliveryInstructions__c</fullName>
    <description>Specific instruction to be followed for Delivery</description>
    <label>Delivery Instructions</label>
    <type>TextArea</type>
</CustomField>