force-app/main/default/objects/Article__c/fields/Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Date__c</fullName>
    <description>StarTrack: Field to capture dispatch date for article</description>
    <label>Dispatch Date</label>
    <type>DateTime</type>
</CustomField>