force-app/main/default/objects/Article__c/fields/ExpectedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDeliveryDate__c</fullName>
    <description>SSSW</description>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>