force-app/main/default/objects/Article__c/fields/ExpectedDeliveryDate_Str__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDeliveryDate_Str__c</fullName>
    <label>Expected Delivery Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>