force-app/main/default/objects/Article__c/fields/ExternalTrackingID__c.field-meta.xml
<CustomField>
    <fullName>ExternalTrackingID__c</fullName>
    <description>This is to record the last mile provider tracking ID by SAP EM, this will be populated only for international parcels</description>
    <inlineHelpText>Last Mile Provider tracking ID</inlineHelpText>
    <label>External Tracking ID</label>
    <type>TextArea</type>
</CustomField>