force-app/main/default/objects/Article__c/fields/Freight_Amount__c.field-meta.xml
<CustomField>
    <fullName>Freight_Amount__c</fullName>
    <description>StarTrack - Freight Amount of Consignment. Used in LDC Approvals.</description>
    <label>Freight Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>