force-app/main/default/objects/Article__c/fields/FurtherReferences__c.field-meta.xml
<CustomField>
	<fullName>FurtherReferences__c</fullName>
	<description>Stores references that are retrieved from StarTrack consignment search API</description>
	<label>Further References</label>
	<length>1024</length>
	<type>LongTextArea</type>
</CustomField>