force-app/main/default/objects/Article__c/fields/HasExtraCover__c.field-meta.xml
<CustomField>
    <fullName>HasExtraCover__c</fullName>
    <description>2022-11-01 - moved from Apex logic into formula. Used in Apex classes to determine business logic</description>
    <formula>AND(
  NOT(ISBLANK(ArticleID__c)),
  NOT(ISBLANK(InsuranceAmount__c)),
  InsuranceAmount__c &gt; 0,
  ISBLANK(MLID__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determine if the Article is considered to have Extra Cover based on Insurance Amount and Merchant Location ID (MLID)</inlineHelpText>
    <label>Has Extra Cover</label>
    <type>Checkbox</type>
</CustomField>