force-app/main/default/objects/Article__c/fields/LocationCodeName__c.field-meta.xml
<CustomField>
    <fullName>LocationCodeName__c</fullName>
    <description>SSSW</description>
    <label>Location Code Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>