force-app/main/default/objects/Article__c/fields/MailCategory__c.field-meta.xml
<CustomField>
    <fullName>MailCategory__c</fullName>
    <description>e.g. Airmail or Priority mail</description>
    <label>Mail Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>