force-app/main/default/objects/Article__c/fields/mls_Postcode__c.field-meta.xml
<CustomField>
    <fullName>mls_Postcode__c</fullName>
    <description>Field used to support the remediation process for missorted or looping parcels.</description>
    <inlineHelpText>Field used to support the remediation process for missorted or looping parcels.</inlineHelpText>
    <label>Remediation Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>