force-app/main/default/objects/Article__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>StarTrack: Capture network information for an article</description>
    <label>Network</label>
    <referenceTo>Network__c</referenceTo>
    <relationshipLabel>Articles</relationshipLabel>
    <relationshipName>Articles</relationshipName>
    <type>Lookup</type>
</CustomField>