force-app/main/default/objects/Article__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>