force-app/main/default/objects/Article__c/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <label>Product Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>