force-app/main/default/objects/Article__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <description>Created on MyNetwork project based on data mapping</description>
    <label>Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>