force-app/main/default/objects/Article__c/fields/Receiver_APCN__c.field-meta.xml
<CustomField>
    <fullName>Receiver_APCN__c</fullName>
    <label>Receiver APCN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>