force-app/main/default/objects/Article__c/fields/Receiver_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Suburb__c</fullName>
    <description>StarTrack Receiver Suburb will be used store the suburb data of the receiver.</description>
    <label>Receiver Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>