force-app/main/default/objects/Article__c/fields/ReceiverAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>ReceiverAddressLine1__c</fullName>
    <label>Receiver Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>