force-app/main/default/objects/Article__c/fields/ReceiverCity__c.field-meta.xml
<CustomField>
    <fullName>ReceiverCity__c</fullName>
    <label>Receiver City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>