force-app/main/default/objects/Article__c/fields/ReceiverPostcode__c.field-meta.xml
<CustomField>
    <fullName>ReceiverPostcode__c</fullName>
    <label>Receiver Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>