force-app/main/default/objects/Article__c/fields/ReferenceID__c.field-meta.xml
<CustomField>
    <fullName>ReferenceID__c</fullName>
    <description>Field used to support the remediation process for missorted or looping parcels.</description>
    <formula>ArticleID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field used to support the remediation process for missorted or looping parcels.</inlineHelpText>
    <label>Remediation Article ID</label>
    <type>Text</type>
</CustomField>