force-app/main/default/objects/Article__c/fields/SenderAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>SenderAddressLine1__c</fullName>
    <label>Sender Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>