force-app/main/default/objects/Article__c/fields/SenderAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>SenderAddressLine2__c</fullName>
    <label>Sender Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>