force-app/main/default/objects/Article__c/fields/SenderCity__c.field-meta.xml
<CustomField>
    <fullName>SenderCity__c</fullName>
    <label>Sender City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>