force-app/main/default/objects/Article__c/fields/SenderCompany__c.field-meta.xml
<CustomField>
    <fullName>SenderCompany__c</fullName>
    <label>Sender Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>