force-app/main/default/objects/Article__c/fields/SenderCountry__c.field-meta.xml
<CustomField>
    <fullName>SenderCountry__c</fullName>
    <description>SSSW</description>
    <label>Sender Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>