force-app/main/default/objects/Article__c/fields/SenderEmail__c.field-meta.xml
<CustomField>
    <fullName>SenderEmail__c</fullName>
    <label>Sender Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>