force-app/main/default/objects/Article__c/fields/SenderName__c.field-meta.xml
<CustomField>
    <fullName>SenderName__c</fullName>
    <description>Name of Sneder</description>
    <label>Sender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>