force-app/main/default/objects/Article__c/fields/SenderPostcode__c.field-meta.xml
<CustomField>
    <fullName>SenderPostcode__c</fullName>
    <label>Sender Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>