force-app/main/default/objects/Article__c/fields/SenderState__c.field-meta.xml
<CustomField>
    <fullName>SenderState__c</fullName>
    <label>Sender State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>