force-app/main/default/objects/Article__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>StarTrack Service Type will be used to store the service type of a particular article record.</description>
    <label>Delivery Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>