force-app/main/default/objects/Article__c/fields/ServiceCode2__c.field-meta.xml
<CustomField>
    <fullName>ServiceCode2__c</fullName>
    <description>SSSW</description>
    <label>Service Code 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>