force-app/main/default/objects/Article__c/fields/SignatureRequiredFlag__c.field-meta.xml
<CustomField>
    <fullName>SignatureRequiredFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature Required</label>
    <type>Checkbox</type>
</CustomField>