force-app/main/default/objects/Article__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>System that generated the consignment record.</description>
    <inlineHelpText>This Consignment record is generated by this system.</inlineHelpText>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEAM</fullName>
            </value>
            <value>
                <fullName>TRACK &amp; TRACE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>