force-app/main/default/objects/Article__c/fields/STServiceType__c.field-meta.xml
<CustomField>
    <fullName>STServiceType__c</fullName>
    <label>Service Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>