force-app/main/default/objects/Article__c/fields/Subdocket_Count__c.field-meta.xml
<CustomField>
    <fullName>Subdocket_Count__c</fullName>
    <label>Subdocket Count</label>
    <summaryForeignKey>Sub_Docket__c.Consignment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>