force-app/main/default/objects/Article__c/fields/SubProduct__c.field-meta.xml
<CustomField>
    <fullName>SubProduct__c</fullName>
    <label>Sub Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>