force-app/main/default/objects/Article__c/fields/TrackingID__c.field-meta.xml
<CustomField>
    <fullName>TrackingID__c</fullName>
    <label>Tracking ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>