force-app/main/default/objects/Article__c/recordTypes/Article.recordType-meta.xml
<RecordType>
    <fullName>Article</fullName>
    <active>true</active>
    <description>SSSW</description>
    <label>Article</label>
</RecordType>