force-app/main/default/objects/Article__c/recordTypes/Consignment.recordType-meta.xml
<RecordType>
    <fullName>Consignment</fullName>
    <active>true</active>
    <description>SSSW</description>
    <label>Consignment</label>
</RecordType>