force-app/main/default/objects/Article__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ArticleID__c</columns>
    <columns>Consignment__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SenderName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ReceiverEmail__c</columns>
    <columns>ConsignmentParcelCount__c</columns>
    <columns>SenderEmail__c</columns>
    <columns>SenderAddress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>