force-app/main/default/objects/Article__c/listViews/AllConsignments.listView-meta.xml
<ListView>
    <fullName>AllConsignments</fullName>
    <columns>NAME</columns>
    <columns>ArticleID__c</columns>
    <columns>Consignment__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SenderName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ReceiverEmail__c</columns>
    <columns>ConsignmentParcelCount__c</columns>
    <columns>SenderEmail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Article__c.Consignment</value>
    </filters>
    <label>All Consignments</label>
</ListView>